<!--
  ~ project ：JunjieFinance
  ~ author : dluobida
  ~ class : strings.xml
  ~ package : E:/workspace/ASProject/JunjieFinance/app/src/main/res/values/strings.xml
  ~ currentModifyTime : 2019-10-29 21:10:48
  ~ lastModifyTime : 2019-10-28 23:10:23
  ~ Copyright (c) 2019 dluobida .
  -->

<resources>
    <string name="app_name">蓝猫理财</string>

    <!-- navigation -->
    <string name="login_in">Login</string>
    <string name="my_collect">Collect</string>
    <string name="check_update">检查更新</string>
    <string name="back_sync">同步备份</string>
    <string name="nav_todo">TODO</string>
    <string name="nav_night_mode">Night mode</string>
    <string name="nav_day_mode">Day mode</string>
    <string name="setting">Setting</string>
    <string name="about_us">About Us</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>

    <!-- home pager -->
    <string name="tab_expand">支出</string>
    <string name="tab_income">收入</string>
    <string name="tab_transfer">转账</string>
    <string name="tab_assets">资产</string>
    <string name="tab_chart">图表</string>

    <!-- behavior -->
    <string name="scale_down_show_behavior" translatable="false">com.dluobida.bluecat.finance.widget.behavior.ScaleDownShowBehavior</string>
</resources>
